# python-rmq-pubsub

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: subscriber1.env  subscriber2.env
migrations/: 00001.init.down.cql  00001.init.up.cql
publisher/: publisher.py
subscriber/: subscriber.py
