[project]
name = "software-prac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "aio-pika>=9.5.5",
    "aioredlock>=0.7.3",
    "cassandra-driver>=3.29.2",
    "hiredis>=3.1.0",
    "msgpack>=1.1.0",
    "orjson>=3.10.16",
    "redis>=5.2.1",
]
